--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -19,6 +19,8 @@
 \newcommand*{\getSubmissionDate}{15.08.2019}
 \newcommand*{\getSubmissionLocation}{Munich}
 
+\usepackage{amsmath}
+
 \begin{document}
 
 % Set page numbering to avoid "destination with the same identifier has been already used" warning for cover page.
@@ -40,14 +42,15 @@
 
 \input{chapters/01_introduction}
 \input{chapters/02_navier}
-\input{chapters/03_errors}
+\input{chapters/03_discretization}
+\input{chapters/04_numerical_analysis}
 
 
 \appendix{}
 
 \microtypesetup{protrusion=false}
-\listoffigures{}
-\listoftables{}
+%\listoffigures{}
+%\listoftables{}
 \microtypesetup{protrusion=true}
 \printbibliography{}
 
