Wrote section on alternate vertical coordinate systems (nonhydrostatic). Wrote sections on hydrostatic assumption, const. Temperature, ignoring horizontal winds. Activated bibliography.

--- a/thesis/bibliography.bib
+++ b/thesis/bibliography.bib
@@ -1,7 +1,20 @@
-@book{latex,
-  title = {LaTeX : A Documentation Preparation System User's Guide and Reference Manual},
-  publisher = {Addison-Wesley Professional},
-  year = {1994},
-  author = {Leslie Lamport}
+% Encoding: UTF-8
+
+@Article{kasahara1974various,
+  author  = {Kasahara, Akira},
+  title   = {Various vertical coordinate systems used for numerical weather prediction},
+  journal = {Monthly Weather Review},
+  year    = {1974},
+  volume  = {102},
+  number  = {7},
+  pages   = {509--522},
 }
 
+@Book{coiffier2011fundamentals,
+  title     = {Fundamentals of numerical weather prediction},
+  publisher = {Cambridge University Press},
+  year      = {2011},
+  author    = {Coiffier, Jean},
+}
+
+@Comment{jabref-meta: databaseType:bibtex;}
