--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -2,8 +2,9 @@
 
 % TODO: decide if one-sided/two-sided
 %\documentclass[headsepline,footsepline,footinclude=false,fontsize=11pt,paper=a4,listof=totoc,bibliography=totoc,BCOR=12mm,DIV=12]{scrbook} % two-sided
-\documentclass[headsepline,footsepline,footinclude=false,oneside,fontsize=11pt,paper=a4,listof=totoc,bibliography=totoc]{scrbook} % one-sided
-
+\documentclass[headsepline,footsepline,footinclude=false,
+oneside,fontsize=11pt,paper=a4,listof=totoc]{scrbook} % one-sided
+%,bibliography=totoc
 % TODO: change citation style in settings
 \input{settings}
 
@@ -21,7 +22,12 @@
 
 \usepackage{amsmath}
 
+%\usepackage{biblatex}
+%\addbibresource{bibliography.bib}
+\bibliographystyle{unsrt}
+
 \begin{document}
+
 
 % Set page numbering to avoid "destination with the same identifier has been already used" warning for cover page.
 % (see https://en.wikibooks.org/wiki/LaTeX/Hyperlinks#Problems_with_Links_and_Pages).
@@ -52,6 +58,7 @@
 %\listoffigures{}
 %\listoftables{}
 \microtypesetup{protrusion=true}
-\printbibliography{}
+%\bibliographystyle{abbrv}
+\bibliography{bibliography}
 
 \end{document}
