--- a/thesis/settings.tex
+++ b/thesis/settings.tex
@@ -5,15 +5,15 @@
 \usepackage[sc]{mathpazo}
 \usepackage[ngerman,american]{babel}
 \usepackage[autostyle]{csquotes}
-\usepackage[%
-  backend=biber,
-  url=false,
-  style=alphabetic,
-  maxnames=4,
-  minnames=3,
-  maxbibnames=99,
-  giveninits,
-  uniquename=init]{biblatex} % TODO: adapt citation style
+%\usepackage[%
+%  backend=biber,
+%  url=false,
+%  style=alphabetic,
+%  maxnames=4,
+%  minnames=3,
+%  maxbibnames=99,
+%  giveninits,
+%  uniquename=init]{biblatex} % TODO: adapt citation style
 \usepackage{graphicx}
 \usepackage{scrhack} % necessary for listings package
 \usepackage{listings}
@@ -26,7 +26,7 @@
 \usepackage{caption}
 \usepackage[hidelinks]{hyperref} % hidelinks removes colored boxes around references and links
 
-\bibliography{bibliography}
+%\bibliography{bibliography}
 
 \setkomafont{disposition}{\normalfont\bfseries} % use serif font for headings
 \linespread{1.05} % adjust line spread for mathpazo font
