Implemented alternate coordinate system for nonhydrostatic equations. Made displaying functions more versatile.

--- a/thesis/bibliography.bib
+++ b/thesis/bibliography.bib
@@ -17,4 +17,14 @@
   author    = {Coiffier, Jean},
 }
 
+@Article{laprise1992euler,
+  author  = {Laprise, Ren{\'e}},
+  title   = {The Euler equations of motion with hydrostatic pressure as an independent variable},
+  journal = {Monthly weather review},
+  year    = {1992},
+  volume  = {120},
+  number  = {1},
+  pages   = {197--207},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
