Rewrote introduction and second chapter to make more understandable.

--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -21,6 +21,8 @@ oneside,fontsize=11pt,paper=a4,listof=totoc]{scrbook} % one-sided
 \newcommand*{\getSubmissionLocation}{Munich}
 
 \usepackage{amsmath}
+\usepackage{makecell}
+\usepackage{tabu}
 
 %\usepackage{biblatex}
 %\addbibresource{bibliography.bib}
