Wrote chapter on grid discretizations. Improved Implementation chapter slightly. Added Appendix.

--- a/thesis/bibliography.bib
+++ b/thesis/bibliography.bib
@@ -27,4 +27,15 @@
   pages   = {197--207},
 }
 
+@Article{moler2003nineteen,
+  author    = {Moler, Cleve and Van Loan, Charles},
+  title     = {Nineteen dubious ways to compute the exponential of a matrix, twenty-five years later},
+  journal   = {SIAM review},
+  year      = {2003},
+  volume    = {45},
+  number    = {1},
+  pages     = {3--49},
+  publisher = {SIAM},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
