--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -56,6 +56,7 @@ oneside,fontsize=11pt,paper=a4,listof=totoc]{scrbook} % one-sided
 
 
 \appendix{}
+\input{chapters/appendix}
 
 \microtypesetup{protrusion=false}
 %\listoffigures{}
