Wrote last chapter. Reworked some figures.

--- a/thesis/bibliography.bib
+++ b/thesis/bibliography.bib
@@ -38,4 +38,21 @@
   publisher = {SIAM},
 }
 
+@Article{larson1963stratosphere,
+  author = {Larson, Terry J and Montoya, EJ},
+  title  = {Stratosphere and mesosphere density-height profiles obtained with the x-15 airplane},
+  year   = {1963},
+}
+
+@Article{hardy1942velocity,
+  author    = {Hardy, Howard C and Telfair, David and Pielemeier, WH},
+  title     = {The velocity of sound in air},
+  journal   = {The Journal of the Acoustical Society of America},
+  year      = {1942},
+  volume    = {13},
+  number    = {3},
+  pages     = {226--233},
+  publisher = {ASA},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
