Added more sources. Wrote small section of spectral methods. Added content to Appendix. Added code-snippets to make implementation chapter more understandable. Added Conclusion skeleton.

--- a/thesis/bibliography.bib
+++ b/thesis/bibliography.bib
@@ -55,4 +55,90 @@
   publisher = {ASA},
 }
 
+@Book{smith1985numerical,
+  title     = {Numerical solution of partial differential equations: finite difference methods},
+  publisher = {Oxford university press},
+  year      = {1985},
+  author    = {Smith, Gordon D and Smith, Gordon D},
+}
+
+@Article{holdaway2013comparison,
+  author    = {Holdaway, D and Thuburn, J and Wood, N},
+  title     = {Comparison of Lorenz and Charney--Phillips vertical discretisations for dynamics--boundary layer coupling. Part I: Steady states},
+  journal   = {Quarterly Journal of the Royal Meteorological Society},
+  year      = {2013},
+  volume    = {139},
+  number    = {673},
+  pages     = {1073--1086},
+  publisher = {Wiley Online Library},
+}
+
+@Misc{lyu2016plasma,
+  author       = {Ling-Hsiao Lyu},
+  title        = {Appendix C. Derivation of the Numerical Integration Formulae},
+  howpublished = {lecture},
+  month        = aug,
+  year         = {2016},
+  url          = {http://www.ss.ncu.edu.tw/~lyu/lecture_files_en/lyu_NSSP_Notes/Lyu_NSSP_AppendixC.pdf},
+}
+
+@Book{suli2003introduction,
+  title     = {An introduction to numerical analysis},
+  publisher = {Cambridge university press},
+  year      = {2003},
+  author    = {S{\"u}li, Endre and Mayers, David F},
+}
+
+@Article{mohr2008codata,
+  author    = {Mohr, Peter J and Taylor, Barry N and Newell, David B},
+  title     = {CODATA recommended values of the fundamental physical constants: 2006},
+  journal   = {Journal of Physical and Chemical Reference Data},
+  year      = {2008},
+  volume    = {80},
+  number    = {3},
+  pages     = {633--1284},
+  publisher = {NIST},
+}
+
+@Book{langeheinecke1993thermodynamik,
+  title     = {Thermodynamik f{\"u}r Ingenieure},
+  publisher = {Springer},
+  year      = {1993},
+  author    = {Langeheinecke, Klaus and Jany, Peter and Thieleke, Gerd},
+}
+
+@Article{beckett1955tables,
+  author    = {Beckett, Charles W and Hilsenrath, Joseph},
+  title     = {Tables of thermal properties of gases, comprising tables of thermodynamic and transport properties of air, argon, carbon dioxide, carbon monoxide, hydrogen, nitrogen, oxygen and steam},
+  year      = {1955},
+  publisher = {[sn]},
+}
+
+@InBook{pennlectureconsts,
+  url = {https://www.me.psu.edu/cimbala/me433/Links/Table_A_9_CC_Properties_of_Air.pdf},
+}
+
+@Unpublished{cabralnsthermo,
+  author = {Marco Cabral},
+  title  = {Navier Stokes and Thermodynamics V0.93},
+  month  = jan,
+  year   = {2001},
+  url    = {https://www.labma.ufrj.br/~mcabral/textos/edp/tNavier-Stokes.pdf},
+}
+
+@Book{vallis2017atmospheric,
+  title     = {Atmospheric and oceanic fluid dynamics},
+  publisher = {Cambridge University Press},
+  year      = {2017},
+  author    = {Vallis, Geoffrey K},
+}
+
+@Article{johnson2011notes,
+  author  = {Johnson, Steven G},
+  title   = {Notes on FFT-based differentiation},
+  journal = {MIT Applied Mathematics},
+  year    = {2011},
+  number  = {April},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
