--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -53,6 +53,7 @@ oneside,fontsize=11pt,paper=a4,listof=totoc]{scrbook} % one-sided
 \input{chapters/03_discretization}
 \input{chapters/04_implementation}
 \input{chapters/05_numerical_analysis}
+\input{chapters/06_conclusion}
 
 
 \appendix{}
