Added abstract and conclusion. Threw out exponential integrators. Rewrote Introduction. Corrected some phrasing. Redid some figures. Worked on formatting.

--- a/thesis/bibliography.bib
+++ b/thesis/bibliography.bib
@@ -114,8 +114,11 @@
   publisher = {[sn]},
 }
 
-@InBook{pennlectureconsts,
-  url = {https://www.me.psu.edu/cimbala/me433/Links/Table_A_9_CC_Properties_of_Air.pdf},
+@Book{cengel2010fluid,
+  title     = {Fluid mechanics},
+  publisher = {Tata McGraw-Hill Education},
+  year      = {2010},
+  author    = {Cengel, Yunus A},
 }
 
 @Unpublished{cabralnsthermo,
@@ -139,6 +142,25 @@
   journal = {MIT Applied Mathematics},
   year    = {2011},
   number  = {April},
+}
+
+@Book{durran2010numerical,
+  title     = {Numerical methods for fluid dynamics: With applications to geophysics},
+  publisher = {Springer Science \& Business Media},
+  year      = {2010},
+  author    = {Durran, Dale R},
+  volume    = {32},
+}
+
+@Article{lorenz1960energy,
+  author    = {Lorenz, Edward N},
+  title     = {Energy and numerical weather prediction},
+  journal   = {Tellus},
+  year      = {1960},
+  volume    = {12},
+  number    = {4},
+  pages     = {364--373},
+  publisher = {Taylor \& Francis},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
