--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -8,6 +8,10 @@ oneside,fontsize=11pt,paper=a4,listof=totoc]{scrbook} % one-sided
 % TODO: change citation style in settings
 \input{settings}
 
+\usepackage{empheq,fancybox}
+\newcommand*\widefbox[1]{\fbox{\hspace{2em}#1\hspace{2em}}}
+
+
 % TODO: change thesis information
 \newcommand*{\getUniversity}{Technische Universität München}
 \newcommand*{\getFaculty}{Department of Informatics}
@@ -17,7 +21,7 @@ oneside,fontsize=11pt,paper=a4,listof=totoc]{scrbook} % one-sided
 \newcommand*{\getDoctype}{Bachelor's Thesis in Informatics}
 \newcommand*{\getSupervisor}{Prof. Martin Schulz}
 \newcommand*{\getAdvisor}{Martin Schreiber}
-\newcommand*{\getSubmissionDate}{15.08.2019}
+\newcommand*{\getSubmissionDate}{15.09.2019}
 \newcommand*{\getSubmissionLocation}{Munich}
 
 \usepackage{amsmath}
