All kinds of corrections to thesis.

--- a/thesis/bibliography.bib
+++ b/thesis/bibliography.bib
@@ -163,4 +163,150 @@
   publisher = {Taylor \& Francis},
 }
 
+@Article{gommes2010guide,
+  author  = {Gommes, R and Challinor, A and Das, H and Dawod, MA and Mariani, L and Tychon, B and Kr{\"u}ger, R and Otte, U and Vega, RER and Trampf, W},
+  title   = {Guide to Agricultural Meteorological Practices},
+  journal = {World Meteorological Organization},
+  year    = {2010},
+  number  = {134},
+}
+
+@Book{sharman2016aviation,
+  title     = {Aviation Turbulence},
+  publisher = {Springer},
+  year      = {2016},
+  author    = {Sharman, Robert and Lane, Todd},
+}
+
+@Article{becken2011tourism,
+  author = {Becken, Susanne},
+  title  = {The importance of climate and weather for tourism: literature review},
+  year   = {2010},
+  month  = {01},
+}
+
+@Article{carey2012climate,
+  author    = {Carey, Mark},
+  title     = {Climate and history: a critical review of historical climatology and climate change historiography},
+  journal   = {Wiley Interdisciplinary Reviews: Climate Change},
+  year      = {2012},
+  volume    = {3},
+  number    = {3},
+  pages     = {233--249},
+  publisher = {Wiley Online Library},
+}
+
+@Article{smith2011uncertainty,
+  author    = {Smith, Leonard A and Stern, Nicholas},
+  title     = {Uncertainty in science and its role in climate policy},
+  journal   = {Philosophical Transactions of the Royal Society A: Mathematical, Physical and Engineering Sciences},
+  year      = {2011},
+  volume    = {369},
+  number    = {1956},
+  pages     = {4818--4841},
+  publisher = {The Royal Society Publishing},
+}
+
+@Article{caney2011morality,
+  author    = {Simon Caney and Derek Bell},
+  title     = {Morality and Climate Change},
+  journal   = {The Monist},
+  year      = {2011},
+  volume    = {94},
+  number    = {3},
+  pages     = {305--309},
+  issn      = {00269662},
+  publisher = {Oxford University Press},
+  url       = {http://www.jstor.org/stable/23039146},
+}
+
+@Article{mintzer2001climate,
+  author    = {Mintzer, Irving and Michel, David},
+  title     = {Climate change, rights of future generations and intergenerational equity: an in-expert exploration of a dark and cloudy path},
+  journal   = {International Journal of Global Environmental Issues},
+  year      = {2001},
+  volume    = {1},
+  number    = {2},
+  pages     = {203--222},
+  publisher = {Citeseer},
+}
+
+@Article{jang2016comparison,
+  author  = {Jang, Jihyeon and Hong, Song-You},
+  title   = {Comparison of simulated precipitation over East Asia in two regional models with hydrostatic and nonhydrostatic dynamical cores},
+  journal = {Monthly Weather Review},
+  year    = {2016},
+  volume  = {144},
+  number  = {10},
+  pages   = {3579--3590},
+}
+
+@Misc{vertical_image,
+  author       = {K. Cantner, American Geosciences Institute},
+  title        = {Image of Weather Forecase Modeling},
+  howpublished = {Online},
+  url          = {http://wxguys.ssec.wisc.edu/wp-content/uploads/2019/03/WeatherModel.png},
+}
+
+@Book{Carpenter2016,
+  title     = {The Geoscience Handbook: AGI Data Sheets, Fifth Edition},
+  publisher = {American Geosciences Institute},
+  year      = {2016},
+  author    = {Mark B. Carpenter and Christopher M. Keane},
+  isbn      = {978-0-913312-47-6},
+  url       = {https://www.amazon.com/Geoscience-Handbook-Data-Sheets-Fifth/dp/0913312479?SubscriptionId=AKIAIOBINVZYXZQZ2U3A&tag=chimbori05-20&linkCode=xm2&camp=2025&creative=165953&creativeASIN=0913312479},
+}
+
+@Article{kar1995formulation,
+  author  = {Kar, Sajal K and Turco, Richard P},
+  title   = {Formulation of a lateral sponge layer for limited-area shallow-water models and an extension for the vertically stratified case},
+  journal = {Monthly weather review},
+  year    = {1995},
+  volume  = {123},
+  number  = {5},
+  pages   = {1542--1559},
+}
+
+@Article{baik2007effects,
+  author    = {Baik, J-J and Kim, Y-H and Kim, J-J and Han, J-Y},
+  title     = {Effects of boundary-layer stability on urban heat island-induced circulation},
+  journal   = {Theoretical and Applied Climatology},
+  year      = {2007},
+  volume    = {89},
+  number    = {1-2},
+  pages     = {73--81},
+  publisher = {Springer},
+}
+
+@Article{chen1997use,
+  author  = {Chen, Xiong-Shan},
+  title   = {Use of the aliased spectral model in numerical weather prediction},
+  journal = {Monthly weather review},
+  year    = {1997},
+  volume  = {125},
+  number  = {11},
+  pages   = {2998--3007},
+}
+
+@Article{shuman1989history,
+  author  = {Shuman, Frederick G},
+  title   = {History of numerical weather prediction at the National Meteorological Center},
+  journal = {Weather and Forecasting},
+  year    = {1989},
+  volume  = {4},
+  number  = {3},
+  pages   = {286--296},
+}
+
+@Article{williamson1992standard,
+  author    = {Williamson, David L and Drake, John B and Hack, James J and Jakob, R{\"u}diger and Swarztrauber, Paul N},
+  title     = {A standard test set for numerical approximations to the shallow water equations in spherical geometry},
+  journal   = {Journal of Computational Physics},
+  year      = {1992},
+  volume    = {102},
+  number    = {1},
+  pages     = {211--224},
+  publisher = {Elsevier},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
