--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -9,7 +9,9 @@ oneside,fontsize=11pt,paper=a4,listof=totoc]{scrbook} % one-sided
 \input{settings}
 
 \usepackage{empheq,fancybox}
-\newcommand*\widefbox[1]{\fbox{\hspace{2em}#1\hspace{2em}}}
+\newcommand*\widefbox[1]{\fbox{\hspace{1.7em}#1\hspace{2em}}}
+\usepackage[section]{placeins}
+\usepackage{graphicx}
 
 
 % TODO: change thesis information
@@ -20,8 +22,8 @@ oneside,fontsize=11pt,paper=a4,listof=totoc]{scrbook} % one-sided
 \newcommand*{\getAuthor}{Linus Hein}
 \newcommand*{\getDoctype}{Bachelor's Thesis in Informatics}
 \newcommand*{\getSupervisor}{Prof. Martin Schulz}
-\newcommand*{\getAdvisor}{Martin Schreiber}
-\newcommand*{\getSubmissionDate}{15.09.2019}
+\newcommand*{\getAdvisor}{Dr. Martin Schreiber}
+\newcommand*{\getSubmissionDate}{16.09.2019}
 \newcommand*{\getSubmissionLocation}{Munich}
 
 \usepackage{amsmath}
