--- a/thesis/pages/abstract.tex
+++ b/thesis/pages/abstract.tex
@@ -1,6 +1,5 @@
 \chapter{\abstractname}
-Many weather and climate models often employ the hydrostatic assumption whereby the atmosphere is assumed to be in vertical equilibrium between gravity and vertical air pressure. 
-As this assumption affects the observable physical effects, in this thesis, the hydrostatic assumption is relaxed, and specifically the vertical dimension is studied.
-To this end, a modular and flexible prototyping implementation in Python 3 is presented which provides complete access to integration methods and discretization.
-The implementation is validated with a suite of test cases.\\
-The code comprises approx. 2500 lines of code and is freely available at the Github repository \url{https://github.com/Linus-H/Vertical-Integration}.
+Weather and climate models based on the Navier Stokes Equations often employ the hydrostatic assumption whereby one assumes the atmosphere to be in vertical equilibrium between gravity and vertical air pressure.
+As this assumption affects the simulated physical effects, in this thesis, we relax the hydrostatic assumption, and specifically study the vertical dimension.
+To this end, we present a tested, modular and flexible prototyping implementation in Python 3 which provides complete access to integration methods and discretization.
+%We then validate the implementation using a suite of test cases.
