--- a/thesis/pages/acknowledgments.tex
+++ b/thesis/pages/acknowledgments.tex
@@ -10,5 +10,9 @@
 \vspace{10mm}
 
 %TODO: Acknowledgments
+\noindent
+I want to thank my advisor, Dr. Martin Schreiber, for giving me helpful pointers whenever I thought I was at a dead end.
+I also want to thank my supervisor, Prof. Dr. Schulz, for allowing me to pursue this subject, even though it is only tangentially related to his main area of research.\\
+Finally, I want to thank my family and friends who have always supported me throughout my studies.
 
 \cleardoublepage{}
