--- a/thesis/pages/disclaimer.tex
+++ b/thesis/pages/disclaimer.tex
@@ -5,6 +5,6 @@ I confirm that this \MakeLowercase{\getDoctype{}} is my own work and I have docu
 
 \vspace{15mm}
 \noindent
-\getSubmissionLocation{}, \getSubmissionDate{} \hspace{50mm} \getAuthor{}
+\getSubmissionLocation{}, 09.09.2019 \hspace{50mm} \getAuthor{}
 
 \cleardoublepage{}
