--- a/thesis/bibliography.bib
+++ b/thesis/bibliography.bib
@@ -19,7 +19,7 @@
 
 @Article{laprise1992euler,
   author  = {Laprise, Ren{\'e}},
-  title   = {The Euler equations of motion with hydrostatic pressure as an independent variable},
+  title   = {The {E}uler equations of motion with hydrostatic pressure as an independent variable},
   journal = {Monthly weather review},
   year    = {1992},
   volume  = {120},
@@ -64,7 +64,7 @@
 
 @Article{holdaway2013comparison,
   author    = {Holdaway, D and Thuburn, J and Wood, N},
-  title     = {Comparison of Lorenz and Charney--Phillips vertical discretisations for dynamics--boundary layer coupling. Part I: Steady states},
+  title     = {Comparison of {L}orenz and {C}harney--{P}hillips vertical discretisations for dynamics--boundary layer coupling. {P}art {I}: {S}teady states},
   journal   = {Quarterly Journal of the Royal Meteorological Society},
   year      = {2013},
   volume    = {139},
@@ -75,7 +75,7 @@
 
 @Misc{lyu2016plasma,
   author       = {Ling-Hsiao Lyu},
-  title        = {Appendix C. Derivation of the Numerical Integration Formulae},
+  title        = {Appendix {C}. {D}erivation of the {N}umerical {I}ntegration {F}ormulae},
   howpublished = {lecture},
   month        = aug,
   year         = {2016},
@@ -91,7 +91,7 @@
 
 @Article{mohr2008codata,
   author    = {Mohr, Peter J and Taylor, Barry N and Newell, David B},
-  title     = {CODATA recommended values of the fundamental physical constants: 2006},
+  title     = {{CODATA} recommended values of the fundamental physical constants: 2006},
   journal   = {Journal of Physical and Chemical Reference Data},
   year      = {2008},
   volume    = {80},
@@ -101,7 +101,7 @@
 }
 
 @Book{langeheinecke1993thermodynamik,
-  title     = {Thermodynamik f{\"u}r Ingenieure},
+  title     = {{T}hermodynamik f{\"u}r {I}ngenieure},
   publisher = {Springer},
   year      = {1993},
   author    = {Langeheinecke, Klaus and Jany, Peter and Thieleke, Gerd},
@@ -123,7 +123,7 @@
 
 @Unpublished{cabralnsthermo,
   author = {Marco Cabral},
-  title  = {Navier Stokes and Thermodynamics V0.93},
+  title  = {Navier {S}tokes and {T}hermodynamics {V}0.93},
   month  = jan,
   year   = {2001},
   url    = {https://www.labma.ufrj.br/~mcabral/textos/edp/tNavier-Stokes.pdf},
@@ -138,14 +138,14 @@
 
 @Article{johnson2011notes,
   author  = {Johnson, Steven G},
-  title   = {Notes on FFT-based differentiation},
+  title   = {Notes on {FFT}-based differentiation},
   journal = {MIT Applied Mathematics},
   year    = {2011},
   number  = {April},
 }
 
 @Book{durran2010numerical,
-  title     = {Numerical methods for fluid dynamics: With applications to geophysics},
+  title     = {Numerical methods for fluid dynamics: {W}ith applications to geophysics},
   publisher = {Springer Science \& Business Media},
   year      = {2010},
   author    = {Durran, Dale R},
@@ -165,14 +165,14 @@
 
 @Article{gommes2010guide,
   author  = {Gommes, R and Challinor, A and Das, H and Dawod, MA and Mariani, L and Tychon, B and Kr{\"u}ger, R and Otte, U and Vega, RER and Trampf, W},
-  title   = {Guide to Agricultural Meteorological Practices},
+  title   = {Guide to {A}gricultural {M}eteorological {P}ractices},
   journal = {World Meteorological Organization},
   year    = {2010},
   number  = {134},
 }
 
 @Book{sharman2016aviation,
-  title     = {Aviation Turbulence},
+  title     = {{A}viation {T}urbulence},
   publisher = {Springer},
   year      = {2016},
   author    = {Sharman, Robert and Lane, Todd},
@@ -209,7 +209,7 @@
 
 @Article{caney2011morality,
   author    = {Simon Caney and Derek Bell},
-  title     = {Morality and Climate Change},
+  title     = {{M}orality and {C}limate {C}hange},
   journal   = {The Monist},
   year      = {2011},
   volume    = {94},
@@ -233,7 +233,7 @@
 
 @Article{jang2016comparison,
   author  = {Jang, Jihyeon and Hong, Song-You},
-  title   = {Comparison of simulated precipitation over East Asia in two regional models with hydrostatic and nonhydrostatic dynamical cores},
+  title   = {Comparison of simulated precipitation over {E}ast {A}sia in two regional models with hydrostatic and nonhydrostatic dynamical cores},
   journal = {Monthly Weather Review},
   year    = {2016},
   volume  = {144},
@@ -243,13 +243,13 @@
 
 @Misc{vertical_image,
   author       = {K. Cantner, American Geosciences Institute},
-  title        = {Image of Weather Forecase Modeling},
+  title        = {Image of {W}eather {F}orecast {M}odeling},
   howpublished = {Online},
   url          = {http://wxguys.ssec.wisc.edu/wp-content/uploads/2019/03/WeatherModel.png},
 }
 
 @Book{Carpenter2016,
-  title     = {The Geoscience Handbook: AGI Data Sheets, Fifth Edition},
+  title     = {The {G}eoscience {H}andbook: {AGI} {D}ata {S}heets, {F}ifth {E}dition},
   publisher = {American Geosciences Institute},
   year      = {2016},
   author    = {Mark B. Carpenter and Christopher M. Keane},
@@ -290,7 +290,7 @@
 
 @Article{shuman1989history,
   author  = {Shuman, Frederick G},
-  title   = {History of numerical weather prediction at the National Meteorological Center},
+  title   = {History of numerical weather prediction at the {N}ational {M}eteorological {C}enter},
   journal = {Weather and Forecasting},
   year    = {1989},
   volume  = {4},
